--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=server
 logging.level.org.springframework.web=DEBUG
-
+spring.datasource.url=jdbc:mysql://localhost:3306/hoophelperDB
+spring.datasource.username=root
+spring.datasource.password=your_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=validate
