--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.application.name=server
-logging.level.org.springframework.web=DEBUG
-spring.datasource.url=jdbc:mysql://localhost:3306/hoophelperDB
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/hoophelperdb
 spring.datasource.username=root
-spring.datasource.password=your_password
+spring.datasource.password=$nugharbour
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql: true
